added filter based on whether a drink is alcoholic or non-alcoholic

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -78,7 +78,7 @@
                 <span class="tag" tag-set="3">most popular</span>
             </div>
         </div>
-        <div class="element-container btn-container">
+        <div class="element-container btn-container" id="filter-button">
             <button class="btn-bold-orange">FILTER</button>
         </div>
     </div>
