added filter based on category

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -40,12 +40,17 @@
         <div class="element-container">
             <label class="main-label">Categories</label>
             <div class="element-inner-container tags">
-                <span class="tag">vodka</span>
-                <span class="tag">whiskey</span>
-                <span class="tag">beer</span>
-                <span class="tag">gin</span>
-                <span class="tag">wine</span>
-                <span class="tag">...</span>
+                <span class="tag">Beer</span>
+                <span class="tag">cocktail</span>
+                <span class="tag">cocoa</span>
+                <span class="tag">coffee / tea</span>
+                <span class="tag">homemade liqueur</span>
+                <span class="tag">ordinary drink</span>
+                <span class="tag">other / unknown</span>
+                <span class="tag">punch / party drink</span>
+                <span class="tag">shake</span>
+                <span class="tag">shot</span>
+                <span class="tag">soft drink</span>
             </div>
         </div>
         <div class="element-container">
