added sort asc and desc(visual implementation of selection does not work atm)

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -40,17 +40,17 @@
         <div class="element-container">
             <label class="main-label">Categories</label>
             <div class="element-inner-container tags">
-                <span class="tag">Beer</span>
-                <span class="tag">cocktail</span>
-                <span class="tag">cocoa</span>
-                <span class="tag">coffee / tea</span>
-                <span class="tag">homemade liqueur</span>
-                <span class="tag">ordinary drink</span>
-                <span class="tag">other / unknown</span>
-                <span class="tag">punch / party drink</span>
-                <span class="tag">shake</span>
-                <span class="tag">shot</span>
-                <span class="tag">soft drink</span>
+                <span class="tag" tag-set="1">Beer</span>
+                <span class="tag" tag-set="1">cocktail</span>
+                <span class="tag" tag-set="1">cocoa</span>
+                <span class="tag" tag-set="1">coffee / tea</span>
+                <span class="tag" tag-set="1">homemade liqueur</span>
+                <span class="tag" tag-set="1">ordinary drink</span>
+                <span class="tag" tag-set="1">other / unknown</span>
+                <span class="tag" tag-set="1">punch / party drink</span>
+                <span class="tag" tag-set="1">shake</span>
+                <span class="tag" tag-set="1">shot</span>
+                <span class="tag" tag-set="1">soft drink</span>
             </div>
         </div>
         <div class="element-container">
