Added search for ingredients

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -40,21 +40,25 @@
         <div class="element-container">
             <label class="main-label">Categories</label>
             <div class="element-inner-container tags">
-                <span class="tag" tag-set="0">Beer</span>
-                <span class="tag" tag-set="0">cocktail</span>
+                <span class="tag" tag-set="0">shot</span>
                 <span class="tag" tag-set="0">cocoa</span>
                 <span class="tag" tag-set="0">coffee / tea</span>
                 <span class="tag" tag-set="0">homemade liqueur</span>
-                <span class="tag" tag-set="0">ordinary drink</span>
-                <span class="tag" tag-set="0">other / unknown</span>
-                <span class="tag" tag-set="0">punch / party drink</span>
                 <span class="tag" tag-set="0">shake</span>
-                <span class="tag" tag-set="0">shot</span>
+                <span class="tag" tag-set="0">ordinary drink</span>
                 <span class="tag" tag-set="0">soft drink</span>
+                <span class="tag" tag-set="0">punch / party drink</span>
+                <span class="tag" tag-set="0">beer</span>
+                <span class="tag" tag-set="0">cocktail</span>
+                <span class="tag" tag-set="0">other / unknown</span>
+
             </div>
         </div>
         <div class="element-container">
             <label class="main-label">Ingredients</label>
+            <label class="search-bar search-ingredients" for="search-ingredients">
+                <input id="search-ingredients">
+            </label>
             <div class="element-inner-container tags">
                 <span class="tag">lime</span>
                 <span class="tag">cherry</span>
