added ingredient filter (visual implementation of tags still in progress)

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -59,7 +59,7 @@
             <label class="search-bar search-ingredients" for="search-ingredients">
                 <input id="search-ingredients">
             </label>
-            <div class="element-inner-container tags">
+            <div class="element-inner-container ingredients">
                 <span class="tag">lime</span>
                 <span class="tag">cherry</span>
                 <span class="tag">orange</span>
