Added columns for ingredients for recipe page

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -20,7 +20,7 @@
         <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
     <div class="middle-container">
-        <label class="search-bar" for="search">
+        <label class="search-bar search-header" for="search">
             <input id="search">
         </label>
     </div>
