Fixed css/html for ingredients tags & simplified updateIngredientTags()

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -59,7 +59,7 @@
             <label class="search-bar search-ingredients" for="search-ingredients">
                 <input id="search-ingredients">
             </label>
-            <div class="element-inner-container ingredients">
+            <div class="element-inner-container tags ingredients">
 
             </div>
         </div>
