added basic login, signup and logout function (duplicate username is yet to be fixed)

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -26,6 +26,7 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
+        <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
         <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png">
     </div>
 </header>
