Made FE wc3 compliant

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -25,31 +25,31 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
-        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png">
+        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
 <aside id="sidebar">
     <div class="element-border">
         <div class="element-container">
             <div class="element-inner-container tags">
-                <span class="tag" tag-set="1">alcoholic</span>
-                <span class="tag" tag-set="1">non alcoholic</span>
+                <span class="tag" data-tag-set="1">alcoholic</span>
+                <span class="tag" data-tag-set="1">non alcoholic</span>
             </div>
         </div>
         <div class="element-container">
             <label class="main-label">Categories</label>
             <div class="element-inner-container tags">
-                <span class="tag" tag-set="0">shot</span>
-                <span class="tag" tag-set="0">cocoa</span>
-                <span class="tag" tag-set="0">coffee / tea</span>
-                <span class="tag" tag-set="0">homemade liqueur</span>
-                <span class="tag" tag-set="0">shake</span>
-                <span class="tag" tag-set="0">ordinary drink</span>
-                <span class="tag" tag-set="0">soft drink</span>
-                <span class="tag" tag-set="0">punch / party drink</span>
-                <span class="tag" tag-set="0">beer</span>
-                <span class="tag" tag-set="0">cocktail</span>
-                <span class="tag" tag-set="0">other / unknown</span>
+                <span class="tag" data-tag-set="0">shot</span>
+                <span class="tag" data-tag-set="0">cocoa</span>
+                <span class="tag" data-tag-set="0">coffee / tea</span>
+                <span class="tag" data-tag-set="0">homemade liqueur</span>
+                <span class="tag" data-tag-set="0">shake</span>
+                <span class="tag" data-tag-set="0">ordinary drink</span>
+                <span class="tag" data-tag-set="0">soft drink</span>
+                <span class="tag" data-tag-set="0">punch / party drink</span>
+                <span class="tag" data-tag-set="0">beer</span>
+                <span class="tag" data-tag-set="0">cocktail</span>
+                <span class="tag" data-tag-set="0">other / unknown</span>
 
             </div>
         </div>
@@ -74,11 +74,11 @@
         <div class="element-container">
             <label class="main-label">Sort by</label>
             <div class="element-inner-container tags">
-                <span class="tag" tag-set="2">asc</span>
-                <span class="tag" tag-set="2">desc</span>
-                <span class="tag" tag-set="3">trending</span>
-                <span class="tag" tag-set="3">top rated</span>
-                <span class="tag" tag-set="3">most popular</span>
+                <span class="tag" data-tag-set="2">asc</span>
+                <span class="tag" data-tag-set="2">desc</span>
+                <span class="tag" data-tag-set="3">trending</span>
+                <span class="tag" data-tag-set="3">top rated</span>
+                <span class="tag" data-tag-set="3">most popular</span>
             </div>
         </div>
         <div class="element-container btn-container" id="filter-button">
