--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -22,7 +22,7 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
-        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png">
+        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
 <main>
@@ -30,14 +30,14 @@
         <div class="cocktail-container">
             <label class="cocktail-title-label" id="name"></label>
             <label class="cocktail-rating-label" id="rating"></label>
-            <img class="cocktail-img" id="img" src="" alt="Cocktail Thumbnail">
+            <img class="cocktail-img" id="img" src="/client/images/placeholder.png" alt="Cocktail Thumbnail">
         </div>
         <div class="tag-container">
             <div class="element-inner-container tags">
                 <div class="tag-inner-container">
-                    <span class="tag" id="category"></span>
-                    <span class="tag" id="alcoholic"></span>
-                    <span class="tag" id="glass"></span>
+                    <span class="tag" id="category">category</span>
+                    <span class="tag" id="alcoholic">alcoholic</span>
+                    <span class="tag" id="glass">glass</span>
                 </div>
                 <div class="btn-inner-container">
                     <div class="btn-part btn-recommend">
