refined login & signup, added notifications if login/signup weren't successful

--- a/client/pages/authentication/login.html
+++ b/client/pages/authentication/login.html
@@ -14,7 +14,6 @@
     <script type="module" src="/client/pages/authentication/login.js"></script>
 </head>
 <body>
-
 <header>
     <div class="logo-container" id="logo-container">
         <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
@@ -28,22 +27,23 @@
                 <label class="main-label" for="username">Username / Email</label>
                 <div class="element-inner-container">
                     <input class="element-input" type="text" id="username" name="username" required>
+                    <span id="usernameError" style="display:none;color:red;"></span>
                 </div>
             </div>
             <div class="element-container">
                 <label class="main-label" for="password">Password</label>
                 <div class="element-inner-container">
                     <input class="element-input" type="password" id="password" name="password" required>
+                    <span id="passwordError" style="display:none;color:red;"></span>
                 </div>
             </div>
             <div class="element-container btn-container">
                 <button class="btn-bold-orange" type="submit">LOGIN</button>
-                <button class="btn-normal-grey" id="signup">SIGN UP</button>
+                <button class="btn-normal-grey" id="signup" type="button">SIGN UP</button>
             </div>
         </form>
     </div>
 </main>
-
 <script>
     document.getElementById('logo-container').addEventListener('click', function() {
         window.location.href = '/home';
