--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -25,7 +30,7 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
-        <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
+        <button class="btn-normal-grey hidden" id="logout-btn">LOGOUT</button>
         <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
