Made profile page's css/html 👼

--- a/client/pages/authentication/signup.html
+++ b/client/pages/authentication/signup.html
@@ -22,7 +22,7 @@
 </header>
 <main>
     <div class="element-border">
-        <form action="/login" method="POST">
+        <form action="/signup" method="POST">
             <div class="element-container">
                 <label class="main-label" for="username">Username</label>
                 <div class="element-inner-container">
