--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="/client/pages/home/home.css">
+    <script type="module" src="/client/base.js"></script>
     <script type="module" src="/client/pages/home/home.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,7 +92,7 @@
     <div class="element-border">
         <div class="subheader">
             <label class="title-label">DRINKS</label>
-            <span class="tag" id="random-button">open random recipe</span>
+            <span class="tag" id="random-button">Open Random Recipe</span>
         </div>
         <div class="cocktails-container">
             <!-- Cocktail items will be dynamically appended here -->
