display profile info 😜

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -29,19 +29,21 @@
         <div class="element-container">
             <label class="main-label" for="username">Username</label>
             <div class="element-inner-container">
-                <input class="element-input" type="text" id="username" name="username" required>
+                <label class="element-input tags" id="username" name="username"></label>
             </div>
         </div>
         <div class="element-container">
             <label class="main-label" for="username">Email</label>
             <div class="element-inner-container">
-                <input class="element-input" type="text" id="email" name="email" required>
+                <label class="element-input tags" id="email">
+                    <div class="tags-content">Long text that overflows</div>
+                </label>
             </div>
         </div>
         <div class="element-container">
             <label class="main-label" for="password">Password</label>
             <div class="element-inner-container">
-                <input class="element-input" type="password" id="password" name="password" required>
+                <label class="element-input tags" id="password"></label>
             </div>
         </div>
         <div class="element-container btn-container">
