--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -20,6 +20,7 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
+        <button class="btn-normal-grey hidden" id="logout-btn">LOGOUT</button>
         <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
