improved email tag 😏

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -35,8 +35,8 @@
         <div class="element-container">
             <label class="main-label" for="username">Email</label>
             <div class="element-inner-container">
-                <label class="element-input tags" id="email">
-                    <div class="tags-content">Long text that overflows</div>
+                <label class="element-input tags" id="email-tag">
+                    <div class="tags-content" id="email"></div>
                 </label>
             </div>
         </div>
