--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -65,31 +65,30 @@
         </div>
     </div>
     <div class="element-border hidden" id="rate-container">
-        <div class="title-label"><label>RATE</label></div>
         <div class="element-inner-container">
             <label class="element-input tags" id="username"></label>
         </div>
-        <div class="btn-inner-container">
-            <button class="btn-part btn-recommend">
-                <img class="btn-img" src="/client/images/symbol_recommend.png" alt="Recommend Button">
+        <div class="btn-inner-container" id="btn-rate-container">
+            <button class="btn-part btn-grey" id="btn-recommend">
+                <img class="btn-img" data-tag-set="1" src="/client/images/symbol_recommend_grey.png" alt="Recommend Button">
             </button>
-            <button class="btn-part btn-recommend-no">
-                <img class="btn-img" src="/client/images/symbol_recommend_no.png" alt="Not Recommend Button">
+            <button class="btn-part btn-grey" id="btn-recommend-no">
+                <img class="btn-img" data-tag-set="1" src="/client/images/symbol_recommend_no_grey.png" alt="Not Recommend Button">
             </button>
-            <button class="btn-part btn-pin">
-                <img class="btn-img" src="/client/images/symbol_pin.png" alt="Pin Button">
+            <button class="btn-part btn-grey" id="btn-pin">
+                <img class="btn-img" data-tag-set="1" src="/client/images/symbol_pin_grey.png" alt="Pin Button">
             </button>
-        </div>
-        <div class="element-container">
-            <span class="main-label slide-value"></span>
-            <div class="element-inner-container rating-container">
-                <label class="rating-bar" for="slide">
-                    <input id="slide" type="range" min="0.0" max="5.0" step="0.5">
-                </label>
+            <div id="rate-bar">
+                <span class="main-label slide-value"></span>
+                <div class="element-inner-container rating-container">
+                    <label class="rating-bar" for="slide">
+                        <input id="slide" type="range" min="0.0" max="5.0" step="0.5">
+                    </label>
+                </div>
             </div>
         </div>
         <div class="element-container btn-container" id="save-btn">
-            <button class="btn-bold-orange">SAVE</button>
+            <button class="btn-bold-orange">SAVE RATING</button>
         </div>
     </div>
     <div class="element-border" id="comments-container">
