added base for btn-fav in recipe page 🍹

--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -31,6 +31,11 @@
             <label class="cocktail-rating-label" id="rating"></label>
             <img class="cocktail-img" id="img" src="/client/images/placeholder.png" alt="Cocktail Thumbnail">
         </div>
+        <div class="btn-inner-container element-inner-container">
+            <button class="btn-part btn-grey hidden" id="btn-fav">
+                <img class="btn-img" data-tag-set="0" src="/client/images/symbol_fav_grey.png" alt="Favourite Button">
+            </button>
+        </div>
         <div class="tag-container">
             <div class="element-inner-container tags">
                 <div class="tag-inner-container">
