added rating feature & recommend/not recommend ⭐️

--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -94,6 +94,9 @@
     <div class="element-border" id="comments-container">
         <div class="title-label"><label>COMMENTS</label></div>
     </div>
+    <div id="notification-container" class="notification hidden">
+        <span id="notification-message"></span>
+    </div>
 </main>
 </body>
 </html>
