added success messages for logout, signup & delete 🦥

--- a/client/pages/authentication/login.html
+++ b/client/pages/authentication/login.html
@@ -22,6 +22,7 @@
 </header>
 <main>
     <div class="element-border">
+        <div id="accountCreatedMessage" style="display: none; color: green;"></div>
         <form action="/login" method="POST">
             <div class="element-container">
                 <label class="main-label" for="username">Username / Email</label>
