--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -23,6 +23,8 @@
         <label class="search-bar search-header" for="search">
             <input id="search">
         </label>
+        <div id="logoutSuccessMessage" style="display: none; color: red;"></div>
+        <div id="deleteSuccessMessage" style="display: none; color: green;"></div>
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
