--- a/client/pages/authentication/signup.html
+++ b/client/pages/authentication/signup.html
@@ -13,56 +13,56 @@
     <script type="module" src="/client/pages/authentication/signup.js"></script>
 </head>
 <body>
-<header>
-    <div class="logo-container" id="logo-container">
-        <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
-        <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
-    </div>
-</header>
-<main>
-    <div class="element-border">
-        <form action="/signup" method="POST">
-            <div class="element-container">
-                <label class="main-label" for="username">Username</label>
-                <div class="element-inner-container">
-                    <input class="element-input" type="text" id="username" name="username" required>
-                    <span id="usernameError" style="display:none;color:red;"></span>
+    <span class="alert error-alert hidden" id="usernameError"></span>
+    <span class="alert error-alert hidden" id="emailError"></span>
+    <span class="alert error-alert hidden" id="verificationError"></span>
+    <header>
+        <div class="logo-container" id="logo-container">
+            <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
+            <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
+        </div>
+    </header>
+    <main>
+        <div class="element-border">
+            <form action="/signup" method="POST">
+                <div class="element-container">
+                    <label class="main-label" for="username">Username</label>
+                    <div class="element-inner-container">
+                        <input class="element-input" type="text" id="username" name="username" required>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label" for="email">Email</label>
-                <div class="element-inner-container">
-                    <input class="element-input" type="text" id="email" name="email" required>
-                    <span id="emailError" style="display:none;color:red;"></span>
+                <div class="element-container">
+                    <label class="main-label" for="email">Email</label>
+                    <div class="element-inner-container">
+                        <input class="element-input" type="text" id="email" name="email" required>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label" for="password">Password</label>
-                <div class="element-inner-container">
-                    <input class="element-input" type="password" id="password" name="password" required>
+                <div class="element-container">
+                    <label class="main-label" for="password">Password</label>
+                    <div class="element-inner-container">
+                        <input class="element-input" type="password" id="password" name="password" required>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label" for="verification">Password Verification</label>
-                <div class="element-inner-container">
-                    <input class="element-input" type="password" id="verification" name="verification" required>
-                    <span id="verificationError" style="display:none;color:red;"></span>
+                <div class="element-container">
+                    <label class="main-label" for="verification">Password Verification</label>
+                    <div class="element-inner-container">
+                        <input class="element-input" type="password" id="verification" name="verification" required>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container btn-container">
-                <button class="btn-bold-orange" type="submit">CREATE ACCOUNT</button>
-                <button class="btn-normal-grey" id="login-btn" type="button">LOGIN</button>
-            </div>
-        </form>
-    </div>
-</main>
-<script>
-    document.getElementById('logo-container').addEventListener('click', function() {
-        window.location.href = '/home';
-    });
-    document.getElementById('login-btn').addEventListener('click', function() {
-        window.location.href = '/login';
-    });
-</script>
+                <div class="element-container btn-container">
+                    <button class="btn-bold-orange" type="submit">CREATE ACCOUNT</button>
+                    <button class="btn-normal-grey" id="login-btn" type="button">LOGIN</button>
+                </div>
+            </form>
+        </div>
+    </main>
+    <script>
+        document.getElementById('logo-container').addEventListener('click', function() {
+            window.location.href = '/home';
+        });
+        document.getElementById('login-btn').addEventListener('click', function() {
+            window.location.href = '/login';
+        });
+    </script>
 </body>
 </html>
