improved alert messages (part 2 - sequel) 🚨⚠️😱

--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="alert success-alert hidden" id="notification-message"></div>
     <header>
         <div class="logo-container" id="logo-container">
             <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
@@ -107,9 +108,6 @@
         </div>
         <div class="element-border" id="comments-container">
             <div class="title-label"><label>COMMENTS</label></div>
-        </div>
-        <div id="notification-container" class="notification hidden">
-            <span id="notification-message"></span>
         </div>
     </main>
 </body>
