added missing alert messages 😝

--- a/client/pages/authentication/login.html
+++ b/client/pages/authentication/login.html
@@ -14,9 +14,8 @@
     <script type="module" src="/client/pages/authentication/login.js"></script>
 </head>
 <body>
-    <span class="alert error-alert hidden" id="usernameError"></span>
-    <span class="alert error-alert hidden" id="passwordError"></span>
-    <div class="alert success-alert hidden" id="accountCreatedMessage"></div>
+    <span class="alert error-alert hidden" id="alert-error"></span>
+    <div class="alert success-alert hidden" id="alert-success"></div>
     <header>
         <div class="logo-container" id="logo-container">
             <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
