--- a/client/pages/authentication/signup.html
+++ b/client/pages/authentication/signup.html
@@ -13,9 +13,7 @@
     <script type="module" src="/client/pages/authentication/signup.js"></script>
 </head>
 <body>
-    <span class="alert error-alert hidden" id="usernameError"></span>
-    <span class="alert error-alert hidden" id="emailError"></span>
-    <span class="alert error-alert hidden" id="verificationError"></span>
+    <span class="alert error-alert hidden" id="alert-error"></span>
     <header>
         <div class="logo-container" id="logo-container">
             <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
