--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="alert success-alert hidden" id="notification-message"></div>
+    <div class="alert success-alert hidden" id="alert-success"></div>
+    <div class="alert hidden" id="alert-fetch-data"></div>
+    <div class="alert error-alert hidden" id="alert-fetch-error"></div>
     <header>
         <div class="logo-container" id="logo-container">
             <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
