added new alert for already logged in users 🫡

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -17,7 +17,7 @@
     <div class="alert error-alert hidden" id="alert-error"></div>
     <div class="alert success-alert hidden" id="alert-success"></div>
 <header>
-    <div class="logo-container">
+    <div class="logo-container" id="logo-container">
         <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
         <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
