--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -104,8 +104,9 @@
                     </div>
                 </div>
             </div>
-            <div class="element-container btn-container" id="save-btn">
-                <button class="btn-bold-orange">SAVE RATING</button>
+            <div class="element-container btn-container">
+                <button class="btn-bold-orange" id="save-btn">SAVE RATING</button>
+                <button class="btn-normal-grey" id="delete-btn">DELETE</button>
             </div>
         </div>
         <div class="element-border" id="comments-container">
